--- a/src/css/Event.css
+++ b/src/css/Event.css
@@ -72,7 +72,7 @@
     width: 40px;
     height: 40px;
     border-radius: 20px;
-    background-color: #fff7ba;
+    background-color: #c4c4c4;
     cursor: pointer;
   }
   .weekdays{
